refactor with AGP 8.0